
syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

package chat;

option go_package = "chatparser.chat.v1;chatv1";

service Chat {
  rpc ParseFromDir (ParseFromDirRequest) returns (ParseFromDirResponse);
  rpc GetMessagesCount (GetMessagesCountRequest) returns (GetMessagesCountResponse);
  rpc SearchMessages (SearchMessagesRequest) returns (SearchMessagesResponse);
  rpc DeleteMessages (SearchMessagesRequest) returns (DeleteMessageResponse);
}

message ParseFromDirRequest {
  string DirPath = 1;
}

message ParseFromDirResponse {
  bool Ok = 1;
}

message GetMessagesCountRequest {
  common.MessagesFilter Filter = 1;
}

message GetMessagesCountResponse {
  int64 Count = 1;
}

message SearchMessagesRequest {
  common.MessagesFilter Filter = 1;
  int32 Take = 2;
  int32 Skip = 3;
  repeated string Sorts = 4;
}

message SearchMessagesResponse {
  repeated ChatMessage Messages = 1;
}

message ChatMessage {
  int32 Id = 1;
  int32 ChatId = 2;
  string ChatName = 3;
  string UserId = 4;
  string UserName = 5;
  int32 ReplyToMessageId = 6;
  string Text = 7;
  google.protobuf.Timestamp Created = 8;
}

message DeleteMessageResponse {
  bool Ok = 1;
}