
syntax = "proto3";

import "google/protobuf/timestamp.proto";

package chat;

option go_package = "chatParser.chat.v1;chatv1";

service Chat {
  rpc ParseHtml (ParseHtmlRequest) returns (ParseHtmlResponse);
  rpc SearchMessages (SearchMessagesRequest) returns (SearchMessagesResponse);
}

message ParseHtmlRequest {
  string dirPath = 1;
}

message ParseHtmlResponse {
  bool isSuccess = 1;
}

message SearchMessagesRequest {
  SearchAction action = 1;
  google.protobuf.Timestamp minDate = 2;
  google.protobuf.Timestamp maxDate = 3;
  repeated string userIds = 4;
  repeated string sorts = 5;
}

message SearchMessagesResponse {
  repeated ChatMessage messages = 1;
}

message ChatMessage {
  string chatId = 1;
  string userId = 2;
  string text = 3;
  google.protobuf.Timestamp createDate = 4;
}

enum SearchAction{
  None = 0;
  Select = 1;
  Delete = 2;
  Backup = 3;
}